<resources>
    <string name="app_name">Zoe\'s Android Labs</string>
    <string name="button_message">Login</string>
    <string name="type_your_password">Type your Password:</string>
    <string name="your_password_meets_the_requirements">Your password meets the requirements</string>
    <string name="you_shall_not_pass">You shall not pass!</string>
</resources>